--- a/app/spring-api/safe/src/main/resources/application.properties
+++ b/app/spring-api/safe/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=safe
+
+spring.datasource.url=jdbc:oracle:thin:@//210.119.14.80:1521/XE
+spring.datasource.username=PJ2
+spring.datasource.password=1234
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
