--- a/app/react-app/nightsafe/package.json
+++ b/app/react-app/nightsafe/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2"
