회원가입 및 로그인 DB 연동

--- a/app/spring-api/safe/.gitignore
+++ b/app/spring-api/safe/.gitignore
@@ -34,3 +34,13 @@ build/
 
 src/main/resources/application.properties
 application.yml
+
+.env
+
+*.log            
+*.hprof  
+
+*.pid                
+docker-compose.override.yml
+Thumbs.db    
+
