--- a/app/spring-api/safe/src/main/resources/application.properties
+++ b/app/spring-api/safe/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+
+# spring.jackson.time-zone=Asia/Seoul
+# spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
