--- a/app/spring-api/safe/src/main/resources/application.properties
+++ b/app/spring-api/safe/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
+spring.web.resources.static-locations=file:./dist/
+
 # spring.jackson.time-zone=Asia/Seoul
 # spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
