--- a/app/spring-api/safe/src/main/resources/application.properties
+++ b/app/spring-api/safe/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
 spring.web.resources.static-locations=file:./dist/
+server.port=8080
 
 # spring.jackson.time-zone=Asia/Seoul
 # spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
