--- a/app/react-app/nightsafe/package.json
+++ b/app/react-app/nightsafe/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
+    "framer-motion": "^12.19.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "react": "^19.1.0",
